add http client generating from swagger files
