# src/product-api/swagger.yaml
@@ -3,15 +3,17 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError is a generic error message returned by a server
+    description: GenericError GenericError is a generic error message returned by
+      a server
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: github.com/berkayhellagun/microservice/src/product-api/handlers
+    x-go-package: github.com/berkayhellagun/microservice/src/product-api/client/models
   Product:
-    description: Product defines the structure for an api Product
+    description: Product Product defines the structure for an api Product
     properties:
       description:
         description: the description for this product
@@ -45,20 +47,23 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: github.com/berkayhellagun/microservice/src/product-api/data
+    x-go-package: github.com/berkayhellagun/microservice/src/product-api/client/models
   ValidationError:
-    description: ValidationError is a collection of validation error messages
+    description: ValidationError ValidationError is a collection of validation error
+      messages
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: github.com/berkayhellagun/microservice/src/product-api/handlers
+    x-go-package: github.com/berkayhellagun/microservice/src/product-api/client/models
 info:
   description: '# Documentation for Product API'
   title: of Product API
+  version: 1.0.0
 paths:
   /products:
     get:
@@ -114,6 +119,24 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - products
+    get:
+      description: Return a list of products from the database
+      operationId: listSingleProduct
+      parameters:
+      - description: The ID of the product to delete from the database
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
 produces:
 - application/json
 responses:
@@ -125,8 +148,8 @@ responses:
     description: Validation errors defined as an array of strings
     schema:
       $ref: '#/definitions/ValidationError'
-  noContent:
-    description: ""
+  noContentResponse:
+    description: No content is returned by this api endpoint
   productResponse:
     description: Data structure representing a single product
     schema:
